# HW

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  build_01.yml  clang.yml  clang_01.yml  clang_02.yml  clang_03.yml  clang_04.yml  clang_05.yml  clang_06.yml  gcc.yml  gcc_01.yml  gcc_02.yml  gcc_03.yml  gcc_04.yml  gcc_05.yml  gcc_06.yml  mingw.yml  mingw_01.yml  mingw_02.yml  msvc.yml  msvc_01.yml  msvc_02.yml  msvc_03.yml  msvc_04.yml  msvc_05.yml  msvc_06.yml
.github/workflows/01/: clang.yml
01/: CMakeLists.txt
01/include/: lib.h
01/lib/: CMakeLists.txt  lib.cpp
01/main/: CMakeLists.txt
01/main/nolib/: CMakeLists.txt  main.cpp
01/main/shared/: CMakeLists.txt  main.cpp
01/main/static/: CMakeLists.txt
01/shared_lib/: CMakeLists.txt
01/static_lib/: CMakeLists.txt  lib.cpp
02/: .gitmodules
02/libs/: CMakeLists.txt
02/src/: CMakeLists.txt
02/src/main_shared/: CMakeLists.txt  main.cpp
02/src/main_static/: CMakeLists.txt
03/: CMakeLists.txt  README.md
03/libs/: CMakeLists.txt
03/src/: CMakeLists.txt
03/src/01-events/: CMakeLists.txt  header.h  main.cpp
03/src/02-engine-base/: CMakeLists.txt  game.cpp
03/src/03-engine-dll/: CMakeLists.txt  engine.cpp  engine.h
03/src/04-engine-hot-reload/: CMakeLists.txt  app.cpp  engine.cpp  engine.h  game.cpp
04/: CMakeLists.txt  README.md
04/app/: CMakeLists.txt  gfx_program.cpp  lines.cpp  square_fill.cpp  triangle.cpp  triangle_indexed.cpp  triangle_interpolated.cpp
04/libs/: CMakeLists.txt
04/output/: lines.ppm  square_fill.ppm  triangle.ppm
04/output/ppm/: triangle_indexed.ppm  triangle_interpolated.ppm
04/ppm/: CMakeLists.txt  ppm.cpp  ppm.h
04/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
05/app/: CMakeLists.txt  app1.cpp  app2.cpp
05/engine/: CMakeLists.txt
05/engine/include/: app.h  math.h  renderer.h  shader.h
05/engine/src/: app.cpp  math.cpp  renderer.cpp  shader.cpp
05/libs/: CMakeLists.txt
05/libs/glad/: CMakeLists.txt
05/libs/glad/src/: glad.c
06/: CMakeLists.txt  README.md
06/app/: CMakeLists.txt  app1.cpp
06/engine/: CMakeLists.txt
06/engine/include/: app.h  input.h  renderer.h  shader.h  stb_image.h  texture.h  tmath.h
06/engine/src/: app.cpp  input.cpp  math.cpp  renderer.cpp  shader.cpp  texture.cpp
06/libs/: CMakeLists.txt
06/libs/glad/include/glad/: glad.h
